--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "firebase": "^9.13.0",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.39.1",
     "react-icons": "^4.6.0"
   },
   "devDependencies": {
